Source/WebKit2/UIProcess/qt/QtWebPageLoadClient.h
@@ -32,27 +32,23 @@ class QQuickWebView;
 
 namespace WebKit {
 
-class WebPageProxy;
+class QtWebError;
 
 class QtWebPageLoadClient {
 public:
     QtWebPageLoadClient(WKPageRef, QQuickWebView*);
-
-    int loadProgress() const { return m_loadProgress; }
-    void completeLoadWhenProcessDidCrashIfNeeded();
 
 private:
     void didStartProvisionalLoad(const QUrl&);
     void didCommitLoad();
     void didSameDocumentNavigation();
     void didReceiveTitle();
-    void didFirstVisuallyNonEmptyLayout();
+    void didChangeProgress(int);
     void didChangeBackForwardList();
 
     void dispatchLoadSucceeded();
-    void dispatchLoadFailed(WKErrorRef);
+    void dispatchLoadFailed(const QtWebError&);
 
-    void setLoadProgress(int);
 
     // WKPageLoadClient callbacks.
     static void didStartProvisionalLoadForFrame(WKPageRef, WKFrameRef, WKTypeRef userData, const void* clientInfo);
@@ -65,12 +61,9 @@ private:
     static void didStartProgress(WKPageRef, const void* clientInfo);
     static void didChangeProgress(WKPageRef, const void* clientInfo);
     static void didFinishProgress(WKPageRef, const void* clientInfo);
-    static void didFirstVisuallyNonEmptyLayoutForFrame(WKPageRef, WKFrameRef, WKTypeRef userData, const void* clientInfo);
     static void didChangeBackForwardList(WKPageRef, WKBackForwardListItemRef, WKArrayRef, const void *clientInfo);
 
     QQuickWebView* m_webView;
-    WebPageProxy* m_webPageProxy;
-    int m_loadProgress;
 };
 
 } // namespace Webkit
